# fastcc-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  benchmark.cpp  chem_benchmark.cpp  contract.hpp  coordinate.hpp  driver.cc  estimate_sparsity.py  index_tensors.hpp  pybind_test.py  pybind_wrapper.cpp  read.hpp  synthetic_benchmark.cpp  task_queue.hpp  tasks.py  tests.cc  timer.hpp  types.hpp  utils.hpp
scripts/: chicago0.sh  chicago01.sh  chicago123.sh  download_tensors.sh  experiments.sh  nips013.sh  nips2.sh  nips23.sh  sequential_exp.sh  uber02.sh  uber123.sh  vast01.sh  vast014.sh
test_data/: T2_d_LMOP.tns  TEov.tns  TEvv.tns  d_LMOP.tns
